# irobot

./: .gitignore  README.md  mcpnoticelist.md
robot_candle/: Cargo.toml  README.md  config.json
robot_candle/src/: config.rs  main.rs  qwen3.rs  utils.rs
robot_core/: Cargo.toml  README.md  test_parse  test_parse.rs  test_think
robot_core/src/: lib.rs  macros.rs  main.rs
robot_core/src/core/: decision_engine.rs  input_handler.rs  intent.rs  mod.rs  output_handler.rs  perception.rs  persona.rs  router.rs  session.rs  stdin_manager.rs  workflow_engine.rs
robot_core/src/core/sessions/: mod.rs  web_session.rs
robot_core/src/core/tasks/: client.rs  manager.rs
robot_core/src/llm/: adapter.rs  lmstudio.rs  mod.rs
robot_core/src/mcp/: client.rs  mod.rs  registry.rs  rmcp_client.rs  tools.rs
robot_core/src/tentacles/: console.rs  mod.rs  tcp_console.rs  web_console.rs
robot_core/src/utils/: mod.rs
robot_core/src/workflow_steps/: mod.rs
robot_mcp_server/: Cargo.toml  README.md
robot_mcp_server/config/: external.toml
robot_mcp_server/src/: external.rs  main.rs
robot_mcp_server/src/tools/: chat.rs  division.rs  echo.rs  ffprobe.rs  get_current_datetime.rs  get_weather.rs  gpuinfo.rs  long_tern_test.rs  memory.rs  mod.rs  profile.rs  pusher.rs  sub.rs  sum.rs
robot_mcp_server/src/tools/ffmpeg/: ffmpeg_core.rs
tcp_terminal/: Cargo.toml  README.md
tcp_terminal/src/: main.rs
web_chat/: index.html  script.js  styles.css
