[package]
name = "robot_candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
candle = { path = "depends/candle/candle-core", package = "candle-core", version = "0.9.2-alpha.2", features = ["cuda"] }
candle-transformers = { path = "depends/candle/candle-transformers", version = "0.9.2-alpha.2",features = ["cuda"] }
candle-nn = { path = "depends/candle/candle-nn", version = "0.9.2-alpha.2",features = ["cuda"]}
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
