[package]
name = "robot_core"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum = "0.8.8"
rmcp = { version = "0.12.0", features = ["client", "macros", "transport-child-process", "elicitation"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
hyper = { version = "1.8.1", features = ["http1", "client"] }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.0"
tower-http = { version = "0.6.3", features = ["cors"] }
