[package]
name = "robot_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "0.12.0", features = ["server", "client", "macros", "transport-io", "transport-streamable-http-client-reqwest", "elicitation", "schemars"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.0"
serde_json = "1.0.148"
url = "2.5.8"
hyper = { version = "1.8.1", features = ["http1", "client"] }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.0"
chrono = "0.4.42"
hyper-rustls = { version = "0.27.2", features = ["http1", "native-tokio"] }
futures = "0.3.31"
toml = "0.8.19"
